testsuite/tests/deriving/should_fail/T16923.hs
{-# LANGUAGE DerivingVia #-}
module T16923 where

data Foo deriving () via Maybe Maybe
