testsuite/tests/deriving/should_fail/T16923.stderr

T16923.hs:4:32: error:
    • Expecting one more argument to ‘Maybe’
      Expected a type, but ‘Maybe’ has kind ‘* -> *’
    • In the first argument of ‘Maybe’, namely ‘Maybe’
      In the data declaration for ‘Foo’
